change person job

--- a/file.html
+++ b/file.html
@@ -41,7 +41,7 @@
     <section class="jumbotron text-center">
       <img src="images/IMG.jpg" alt="Izzan Hafizh" width="200px" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Izzan Hafizh</h1>
-      <p class="lead">Murder | Science</p>
+      <p class="lead">Student | Bussinessman</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
@@ -174,7 +174,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-3">
-      <p>Created by Fucking Peaky Blinder member <a href="https://www.instagram.com/izzulhaq_6/" class="text-white fw-bold">3izn Shellby</a></p>
+      <p>Created with by <a href="https://www.instagram.com/izzulhaq_6/" class="text-white fw-bold">Izzan Hafizh </a></p>
     </footer>
     <!-- Akhir Footer -->
 
